...
        switch self {
        case .cyclopsHorns: "Cyclope à cornes"
        case .cyclopsCrown: "Cyclope couronné"
        case .radiantEye: "Œil rayonnant"
        case .radarFace: "Visage radar"
        case .starEye: "Œil étoilé"
        case .skull: "Crâne"
        case .waveHair: "Cheveux ondulés"
        case .flameHair: "Cheveux flamme"
        case .labyrinth: "Visage labyrinthe"
        case .locatorHair: "Cheveux balises"
        case .socialRays: "Visage rayonnant"
        case .antennaHair: "Cheveux antennes"
...
